// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyMenuNav/N 1`] = `
<div
  class="MyMenuNav"
  displaynav="N"
>
  <div>
    ABC
  </div>
  <div>
    ABC
  </div>
</div>
`;

exports[`MyMenuNav/Y 1`] = `
<div
  class="MyMenuNav"
  displaynav="Y"
>
  <div>
    ABC
  </div>
  <div>
    ABC
  </div>
</div>
`;
